syntax = "proto3";

package repo;

import "google/protobuf/empty.proto";
option go_package = "github.com/lumbrjx/codek7/repo/pkg/pb/";

service RepoService {
  // User operations
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  // Video operations
  rpc UploadVideo(stream UploadVideoRequest) returns (VideoMetadataResponse);
  rpc GetUserVideos(GetUserVideosRequest) returns (VideoListResponse);
  rpc GetLast3UserVideos(GetLast3UserVideosRequest) returns (Video3ListResponse);
  rpc GetVideoByID(GetVideoRequest) returns (VideoMetadataResponse);
  rpc DownloadVideo(DownloadVideoRequest) returns (stream VideoFileResponse);
  rpc RemoveVideo(GetVideoRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message GetUserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string password = 3;
  string created_at = 4;
}

message UploadVideoRequest {
  oneof data {
    VideoMetadata metadata = 1;
    VideoChunk chunk = 2;
  }
}

message VideoMetadata {
  string user_id = 1;
  string title = 2;
  string description = 3;
  string file_name = 4;
  int64 file_size = 5;
}

message VideoChunk {
  bytes data = 1;
  int32 chunk_number = 2;
  string file_name = 3;
}
message GetLast3UserVideosRequest {
  string user_id = 1;
}
message GetUserVideosRequest {
  string user_id = 1;
}

message GetVideoRequest {
  string video_id = 1;
}

message DownloadVideoRequest {
  string file_name = 1;
}

message VideoMetadataResponse {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string description = 4;
  string created_at = 5;
  string file_name = 6;
}

message Video3ListResponse {
  repeated VideoMetadataResponse videos = 1;
}
message VideoListResponse {
  repeated VideoMetadataResponse videos = 1;
}

message VideoFileResponse {
  oneof data {
    VideoFileMetadata metadata = 1;
    VideoFileChunk chunk = 2;
  }
}

message VideoFileMetadata {
  string file_name = 1;
  int64 file_size = 2;
  string content_type = 3;
}

message VideoFileChunk {
  bytes data = 1;
  int32 chunk_number = 2;
  bool is_last = 3;
}